Fixing scrollbar spacing issue (#142)
For #138. This adds a 5px padding so that the content does not touch the Windows scroll bars.

--- a/src/index.scss
+++ b/src/index.scss
@@ -420,6 +420,7 @@ $collapseHoverColor: #353535;
     max-height: 150px !important;
     width: 220px !important;
     overflow-y: auto !important;
+    padding-right: 5px !important;
 }
 
 .glimpse-hud-field-listing {
